# FFTs

./: CMakeLists.txt  README.md  head.c  head.h  main.c  sample.c  sample.h
DFT/: DFT.c  DFT.h
FFT/: CooleyTukeyAlgorithm.c  CooleyTukeyAlgorithm.h
output/: rectangle.plt  rectangle.txt  sin.plt  sin.txt
